--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ relatorio/sbc-template.blg
 relatorio/sbc-template.bbl
 relatorio/sbc-template.aux
 aplicacao/node_modules
+aplicacao/package-lock.json
