--- a/aplicacao/package.json
+++ b/aplicacao/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/HeckRodSav/PW-projeto",
+    "directory": "aplicacao"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
