--- a/aplicacao/package.json
+++ b/aplicacao/package.json
@@ -9,9 +9,7 @@
     "directory": "aplicacao"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon index.js",
-    "start" : "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
