--- a/aplicacao/package.json
+++ b/aplicacao/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon index.js",
-    "start" : "node index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.17"
   },
