database generator adjust

--- a/aplicacao/settings/config.json
+++ b/aplicacao/settings/config.json
@@ -3,11 +3,8 @@
         "url": "mongodb://localhost:27017",
         "db": "heathweb",
         "colls": {
-            "profiles": "profiles",
-            "sequences": "sequences",
-            "admins": "admins",
-            "sessions": "sessions",
-            "diseases": "diseases"
+            "diseases": "diseases",
+            "symptoms": "symptoms"
         }
     }
 }
